--- a/researchProposal/researchProp_draft.Rmd
+++ b/researchProposal/researchProp_draft.Rmd
@@ -4,7 +4,9 @@ author:
   - Raul Ungureanu
   - "Supervisor: Dr. Charlotte Rae"
 output: 
-  bookdown::pdf_document2
+  bookdown::pdf_document2:
+    toc: yes
+    fig_caption: yes
 bibliography: rProp.bib
 csl: apaNumeric
 link-citations: yes
@@ -54,12 +56,22 @@ Progress against these objectives will help develop a holistic insight into why 
 
 \newpage
 
+# Rationale
+
+Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore it is difficult to formulate an investigative plan that directly builds on prior work. However, I have identified inadequate sleep as the principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep [@Basner2014]. Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt [@Basner2018; @Simpson2016; @Reinhardt2016; @Buxton2010]. Finally, working longer hours is associated with significantly reduced sleep duration and quality [@Marucci-Wellman2016, @VanderHulst2003]. Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
+
+A multitude of bodily systems react to and interact with sleep-loss, a key set being the body’s inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6 [IL-6; a known risk factor for depression @Howren2009] in response to restricted sleep [@Reinhardt2016], an effect that is resilient to recovery sleep [@Simpson2016]. One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system [@Critchley2013]. Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave [@Critchley2017; @Rae2018]. Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act. 
+
+Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli [@Yoo2007a; @Motomura2014]; (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia [[@Yoo2007a; @Motomura2013; @Prather2013; @Zhao2018]; (iii) altered structure and function in the fronto-parietal network [@Cui2015; @Krause2017]. Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. This projects will address the resulting gaps in the literature using a combination of population and cognitive neuroscience, epidemiology and immunological methods. 
+
+\newpage
+
 # Research Outline
 
 
 ***Stage 1: UK Biobank.***
 
-I will begin by identifying neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of ~500,000 individuals, a subset of which (~40,000) completed an imaging follow-up, including both task [i.e. emotional face perception; @Hariri2002a] and resting-state functional Magnetic Resonance Imaging (fMRI). Please see Appendix 1 for the proposed timeline. 
+I will begin by identifying neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of ~500,000 individuals, a subset of which (~40,000) completed an imaging follow-up, including both task [i.e. emotional face perception; @Hariri2002a] and resting-state functional Magnetic Resonance Imaging (fMRI). Please see *Appendix 1* for the proposed timeline. 
 
 In a staged exploratory analysis, using a combination of cognitive and population neuroscience methods, I will: 
 
@@ -67,7 +79,7 @@ In a staged exploratory analysis, using a combination of cognitive and populatio
 
 - Use resting-state fMRI to investigate network characteristics of brain regions identified in the task fMRI data.
 
-- Characterize the interactions between neural and the inflammatory marker CRP.
+- Characterize the interactions between neural function and the inflammatory marker available in the dataset, i.e. C-Reactive Protein (CRP).
 
 - Determine how the identified neural and inflammatory markers jointly affect long-term health and wellbeing in the cohort.
 
@@ -91,11 +103,11 @@ The UK Biobank has the advantage of a large sample size, but offers a correlatio
 
 *Training needs:* 
 
-- Continued training and support from Dr Charlotte Rae, who is expert in MRI techniques,  in implementing HCP-style techniques in our analysis.
+- Continued training and support from Dr Charlotte Rae, who is expert in MRI techniques, in implementing Human Connectome Project (HCP)-style techniques in our analysis.
 
 - Support from Dr Sue Baxter (Director of Innovation and Business Partnerships at Sussex), our local business liaison, in planning recruitment.
 - Phlebotomy training to collect blood samples.
-- Training on the design, collection and analysis of occupational measures from lab collaborators Dr Emma Russell (University of Sussex Business School) and Prof Tom Ormerod (Psychology, Sussex). These collaborations have been established by Charlotte in 2020.
+- Training on the design, collection and analysis of occupational measures from lab collaborators Dr Emma Russell (University of Sussex Business School) and Prof Tom Ormerod (Psychology, Sussex). These collaborations have been established by Dr Rae in 2020.
 
 ***Stage 3. Analysis and write-up.***
 
@@ -103,74 +115,64 @@ The final stage of my project will be primarily focused on the analysis of the d
 
 *Training needs:*
 
-- Continued training and support from Dr Charlotte Rae, who is expert in MRI techniques.
+- Continued training and support from Dr Rae, who is expert in MRI techniques.
 - ELISA training from Dr Lisa Mullen (BSMS) for cytokine analysis. 
 - Support with the interpretation of the physiology data from expert Dr. Jessica Eccles (BSMS).
 
 \newpage
 
-# Hypotheses and predictions.
+# Hypotheses and predictions
 
 
-***H1: Working patterns will be associated with specific neural markers.*** Based on findings in total and partial sleep deprivation [@Yoo2007a; @Motomura2013; @Motomura2014; @Prather2013; @Zhao2018; @Cui2015; @Krause2017; @Yeo2015; @DeHavas2012; @Shao2014; @Lei2015; @Samann2010], I predict: 
+***H1: Working patterns will be associated with specific neural markers.*** Based on findings in the sleep literature [@Yoo2007a; @Motomura2013; @Motomura2014; @Prather2013; @Zhao2018; @Cui2015; @Krause2017; @Yeo2015; @DeHavas2012; @Shao2014; @Lei2015; @Samann2010], I predict that: 
 
-***P:*** Working longer hours will be associated with amygdala hyper-reactivity in response to emotional faces in the task fMRI.
+- In the UK Biobank data, working longer hours will be associated with amygdala hyper-reactivity in response to emotional faces in the task fMRI.
 
-***P:*** Working longer hours will be associated with reduced functional connectivity between the prefrontal cortex and the basal ganglia in the task fMRI, an effect mediated by the insular cortex.
+- In the UK Biobank data, working longer hours will be associated with reduced functional connectivity between the prefrontal cortex and the amygdala in task and resting-state fMRI, an effect mediated by the insular cortex.
 
-***P:*** Working longer hours will be associated with reduced functional connectivity between the prefrontal cortex and the amygdala in task and resting-state fMRI, an effect mediated by the insular cortex.
+- In the UK Biobank data, working longer hours will be associated with reduced functional connectivity within the salience-detection network, executive control, fronto-parietal, and default mode (DMN) networks in resting-state fMRI.
     
-***P:*** Working longer hours will be associated with reduced functional connectivity within the salience-detection network, executive control, fronto-parietal, and default mode (DMN) networks in resting-state fMRI.
+- In the UK Biobank data, working longer hours will be associated with attenuated anticorrelation between task-negative (i.e. DMN) and task-positive regions (i.e. executive control, fronto-parietal, and salience-detection networks) in resting-state fMRI.
 
-***P:*** Working longer hours will be associated with attenuated anticorrelation between task-negative (i.e. DMN) and task-positive regions (i.e. executive control, fronto-parietal, and salience-detection networks) in resting-state fMRI.
+- The above findings will be echoed in the local interventional study.
 
-***P:*** The above findings will be echoed in the interventional study.
-
-***P:*** The intervention to reduce working hours will result in a reversal of these effects.
+- The intervention to reduce working hours will result in a reversal of these effects.
 
 \hspace{1cm}
 
 ***H2: Occupational factors will affect physiological immune function, in part, through altering sleep patterns.*** Given the known neurophysiological consequences of sleep restriction [@Reinhardt2016; @Simpson2016; @Meier-Ewert2004], and the effect of working patterns on sleep duration and quality [@Basner2014; @Basner2018; @Marucci-Wellman2016, @VanderHulst2003], I predict that: 
 
-***P:*** Working longer hours will be associated with higher concentrations of proinflammatory cytokines and related proteins/hormones: CRP in the UK Biobank data; e.g. IL-6 and/or cortisol in the local data.
-***P:*** The intervention to reduce working hours will lead to lower (vs. baseline) levels of IL-6 (as measured through ELISAs).
+- Working longer hours will be associated with higher concentrations of proinflammatory cytokines and related proteins/hormones: CRP in the UK Biobank data; e.g. IL-6 and/or cortisol in the local data.
+- The intervention to reduce working hours will lead to lower (vs. baseline) levels of IL-6 (as measured through ELISAs).
 
 \hspace{1cm}
 
 ***H3: Interoception will mediate the neurophysiological impact of work patterns.*** Given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be key [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. Thus, I predict:
 
-***P:*** Levels of IL-6 will track insular activity in the fMRI data (UK Biobank and local), according to participants’ improved sleep patterns.
-***P:*** Working longer hours will be associated with worse performance on interoceptive measures (e.g. heartbeat perception task) in the local intervention.
+- Levels of IL-6 will track insular activity in the fMRI data (UK Biobank and local), according to participants’ improved sleep patterns.
+- Working longer hours will be associated with worse performance on interoceptive measures (e.g. heartbeat perception task) in the local intervention.
 
-\hspace{1cm}
 
-***H4: Work patterns will affect sleep on both working and non-working days.*** Time-use survey data shows that work is the primary activity exchanged for sleep, and longer working hours are associated with shorter and (subjectively) worse sleep [@Basner2014; @Basner2018; @Marucci-Wellman2016, @VanderHulst2003]. Therefore, I predict:
+***H4: Work patterns will impact cognitive function and workplace performance.*** Based on work time reduction interventions [@Schiller2018; Schiller2017a; @Akerstedt2001], I predict that: 
 
-***P:*** Working longer hours and other time-consuming occupational factors (primarily commute time) will be negatively associated with the amount and subjective experience of sleep in the UK Biobank cohort.
-***P:*** The effects will be echoed in the local interventional study.
-***P:*** The intervention to reduce working hours will result in longer and better sleep (as measured by subjective report and actigraph watches).
+- Working longer hours and other time-consuming occupational factors will negatively correlate with cognitive measures in the UK Biobank (after controlling for confounds).
 
-\hspace{1cm}
+- Working longer hours and other time-consuming occupational factors will negatively correlate with cognitive (e.g. stop signal task) and occupational factors (e.g. team work, job satisfaction, work engagement; mental health) as measured in the local intervention. 
 
-***H5: Work patterns will impact cognitive function and workplace performance.*** Based on work time reduction interventions [@Schiller2018; Schiller2017a; @Akerstedt2001], I predict that: 
-
-***P:*** Working longer hours and other time-consuming occupational factors will negatively correlate with cognitive measures in the UK Biobank (after controlling for confounds).
-
-***P:*** Working longer hours and other time-consuming occupational factors will negatively correlate with cognitive (e.g. stop signal task) and occupational factors (e.g. team work, job satisfaction, work engagement; mental health) as measured in the local intervention. 
-
-***P:*** The intervention to reduce working hours will improve cognition and workplace functioning (measures above).
+- The intervention to reduce working hours will improve cognition and workplace functioning (measures above).
 
 \newpage
 
 # Risks
 
-- Employers might not be interested or willing. However, Dr Charlotte Rae has recruited several collaborators with various employer links, i.e. Sue Baxter in Research & Enterprise, Emma Russell in Business School, Tom Ormerod, head of Applied Behavioural Sciences in Psychology. This forms a multi-armed strategy that greatly increases the likelihood of finding employers that are willing and able to participate.
+- Employers might not be interested or willing. However, Dr Rae has recruited several collaborators with various employer links, i.e. Sue Baxter in Research & Enterprise, Emma Russell in Business School, Tom Ormerod, head of Applied Behavioural Sciences in Psychology. This forms a multi-armed strategy that greatly increases the likelihood of finding employers that are willing and able to participate.
 
 - CISC may not be operational for research scanning by the time we want to start the local study due to Covid19. While unlikely, as the current plan is to re-initiate research in the autumn (2020) and we won’t be looking to start data collection until summer 2021, there is a possibility of subsequent pandemic waves. In that case, we plan to pause MRI acquisition and focus on UK Biobank analysis and publication of findings, as well as collection of pilot data for the local study that does not require MRI or blood sampling and can be done remotely, e.g. questionnaires, cognitive tests.  
 
-- Lack of local experts in handling MRI datasets of this size. However, second supervisor - Prof Jamie Ward - has experience with big data datasets (e.g. database of thousands of synaesthetes). Moreover, I am keen to learn methods for handling large datasets and apply them to our MRI data, and there is an outstanding community of Data/Network Scientists at Sussex who offer educational courses locally, and can also be approached for help (e.g. Prof Luc Berhouze). Finally, Dr Charlotte Rae can also facilitate assistance from Prof Steve Smith and colleagues at Oxford’s FMRIB, a group that  is playing a major role in several Big Data imaging projects, including: HCP, UK Biobank Brain Imaging, and the Developing Human Connectome Project. 
+- Lack of local experts in handling MRI datasets of this size. However, second supervisor - Prof Jamie Ward - has experience with big data datasets (e.g. database of thousands of synaesthetes). Moreover, I am keen to learn methods for handling large datasets and apply them to our MRI data, and there is an outstanding community of Data/Network Scientists at Sussex who offer educational courses locally, and can also be approached for help (e.g. Prof Luc Berhouze). Finally, Dr Rae can also facilitate assistance from Prof Steve Smith and colleagues at Oxford’s FMRIB, a group that  is playing a major role in several Big Data imaging projects, including HCP and UK Biobank Brain Imaging.
 
 \newpage
 
 # References
+
 
