Changed dirr structure

--- a/PR/subsections/workingBrain_PR_StudyInfo.Rmd
+++ b/PR/subsections/workingBrain_PR_StudyInfo.Rmd
@@ -30,7 +30,7 @@ Progress against these objectives will help develop a holistic insight into why 
 
 ## Rationale
 
-Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore it is difficult to formulate an investigative plan that directly builds on prior work. However, I have identified inadequate sleep as the principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep [@Basner2014]. Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt [@Basner2018; @Simpson2016; @Reinhardt2016; @Buxton2010]. Finally, working longer hours is associated with significantly reduced sleep duration and quality [@Marucci-Wellman2016, @VanderHulst2003]. Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
+Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore it is difficult to formulate an investigative plan that directly builds on prior work. However, we have identified inadequate sleep as the principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep [@Basner2014]. Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt [@Basner2018; @Simpson2016; @Reinhardt2016; @Buxton2010]. Finally, working longer hours is associated with significantly reduced sleep duration and quality [@Marucci-Wellman2016, @VanderHulst2003]. Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
 
 A multitude of bodily systems react to and interact with sleep-loss, a key set being the body’s inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6 [IL-6; a known risk factor for depression @Howren2009] in response to restricted sleep [@Reinhardt2016], an effect that is resilient to recovery sleep [@Simpson2016]. One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system [@Critchley2013]. Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave [@Critchley2017; @Rae2018]. Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act. 
 
