--- a/PR/workingBrain_PR_Main.tex
+++ b/PR/workingBrain_PR_Main.tex
@@ -159,8 +159,11 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \begin{document}
 \maketitle
 
-\hypertarget{introduction}{%
-\section{Introduction}\label{introduction}}
+\hypertarget{study-information}{%
+\section{Study information}\label{study-information}}
+
+\hypertarget{background}{%
+\subsection{Background}\label{background}}
 
 Work takes up a huge chunk of our adult lives: the average Briton works approximately 42 hours per week (TUC, 2019b), with an additional \textasciitilde4.9 hours spent on commuting (TUC, 2019a), and an estimate of \textasciitilde10.1 hours in unpaid overtime (TotallyMoney, 2019). These numbers have been growing in the past 30 years (TotallyMoney, 2019; TUC, 2019b, 2019a) without benefits to productivity. Importantly, a growing body of evidence suggests a strong negative impact on our health and wellbeing. Long working hours are associated with higher risk of cardiovascular disease (Bannai \& Tamakoshi, 2014), higher incidence of depressive (Kim, Park, Lee, \& Kim, 2016), and anxiety symptoms (Bannai \& Tamakoshi, 2014), deficient cognitive function (Kajitani, McKenzie, \& Sakata, 2018), and adverse physiological changes (Hulst, 2003). Moreover, interventional studies show that a reduction in working hours benefits both health and productivity (Akerstedt, Olsson, Ingre, Holmgren, \& Kecklund, 2001; Barck-Holst et al., 2017). However, we do not yet understand the neurobiological implications of our modern, increasingly intense, working patterns. Three reasons motivate the need for such an understanding:
 
@@ -202,6 +205,25 @@ Until recently the impact of working patterns on our neurophysiology has been ov
 A multitude of bodily systems react to and interact with sleep-loss, a key set being the body's inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6 (IL-6; a known risk factor for depression Howren, Lamkin, \& Suls, 2009) in response to restricted sleep (Reinhardt et al., 2016), an effect that is resilient to recovery sleep (Simpson et al., 2016). One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system (Critchley \& Harrison, 2013). Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave (Critchley \& Garfinkel, 2017; Rae et al., 2018). Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act.
 
 Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli (Motomura et al., 2014; Yoo, Gujar, Hu, Jolesz, \& Walker, 2007); (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia {[}(Motomura et al., 2013; Prather, Bogdan, \& Hariri, 2013; Yoo et al., 2007; Zhao et al., 2018); (iii) altered structure and function in the fronto-parietal network (Cui et al., 2015; Krause et al., 2017). Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction (Critchley \& Garfinkel, 2017; Critchley \& Harrison, 2013; Ma, Dinges, Basner, \& Rao, 2015; Rae et al., 2018). However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. This projects will address the resulting gaps in the literature using a combination of population and cognitive neuroscience, epidemiology and immunological methods.
+
+\hypertarget{hypotheses-and-predictions}{%
+\subsection{Hypotheses and predictions}\label{hypotheses-and-predictions}}
+
+\hypertarget{design-plan}{%
+\section{Design Plan}\label{design-plan}}
+
+\hypertarget{study-type}{%
+\subsection{Study type}\label{study-type}}
+
+See OSF registration options.
+
+\hypertarget{blinding}{%
+\subsection{2. Blinding}\label{blinding}}
+
+Blinding describes who is aware of the experimenta manipulations within a study.
+
+\hypertarget{study-design}{%
+\subsection{3. Study design}\label{study-design}}
 
 \newpage
 
